--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - RandomNumbers",
+            "request": "launch",
+            "mainClass": "basic.RandomNumbers",
+            "projectName": "java_practice_problems"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - IfStatements",
+            "request": "launch",
+            "mainClass": "basic.IfStatements",
+            "projectName": "java_practice_problems"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - MathOperators",
             "request": "launch",
             "mainClass": "basic.MathOperators",
