--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - RockyV1",
+            "request": "launch",
+            "mainClass": "rock_paper_scissors.RockyV1",
+            "projectName": "java_practice_problems"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - RandomNumbers",
             "request": "launch",
             "mainClass": "basic.RandomNumbers",
